@@ -1,3 +1,13 @@
+2015-03-30  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [EFL][GTK] WebKit2's generate-forwarding-headers.pl should fail if clashing headers found
+        https://bugs.webkit.org/show_bug.cgi?id=142909
+
+        Reviewed by Philippe Normand.
+
+        * Scripts/generate-forwarding-headers.pl:
+        (createForwardingHeadersForFramework):
+
 2015-03-29  Antti Koivisto  <antti@apple.com>
 
         Include cache entry worth to json dump
